--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
 #name1{
     color: rgb(241, 199, 10);
+    
+}
+body{
+    font-family: 'Poppins', sans-serif;
+}
+h1{
+    font-size: 40px;
+}
+.half-width{
+    width: 50%;
+   padding-left: 10%;
+}
+.half-width img {
+    width: 70%;
+}
+p{
+    text-align:justify ;
+}
+section{
+    display: flex;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700px;
 }
