top banner added

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0px;
 }
 h1{
     font-size: 40px;
@@ -29,4 +30,8 @@ section{
     border-radius: 5px;
     color: white;
     font-weight: 700px;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
