--- a/style.css
+++ b/style.css
@@ -11,17 +11,18 @@ h1{
 }
 .half-width{
     width: 50%;
-   padding-left: 10%;
+   padding-left: 7%;
    padding-top: 3%;
 }
 .half-width img {
-    width: 70%;
+    width: 80%;
 }
 p{
     text-align:justify ;
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .link-button{
     text-decoration: none;
@@ -34,4 +35,12 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.section-2{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+#skill{
+    margin-right: 100px;
 }
